--- a/vt/specs/background/animation-1.yaml
+++ b/vt/specs/background/animation-1.yaml
@@ -8,6 +8,19 @@ screen:
   backgroundColor: "#000000"
 
 resources:
+  layouts:
+    screen1:
+      elements:
+        - id: af32
+          type: rect
+          fill: "#000000"
+          width: 1920
+          height: 1080
+          click:
+            actionPayload:
+              actions:
+                nextLine: {}
+
   images:
     alkejf3la:
       fileId: lakjf3lka
@@ -61,6 +74,8 @@ story:
           lines:
             - id: line1
               actions:
+                screen:
+                  resourceId: screen1
                 background:
                   resourceId: alkejf3la
                   animations:
@@ -69,7 +84,7 @@ story:
             - id: line2
               actions:
                 background:
-                  resourceId: alkejf3la
+                  resourceId: 8a3lkja
                   animations:
                     update:
                       animationId: k38df
@@ -79,4 +94,4 @@ story:
                   animations:
                     out:
                       animationId: 8h3js
-                      resourceId: alkejf3la
+                      resourceId: 3ljdasfjlk32
