--- a/vt/specs/complete/one.yaml
+++ b/vt/specs/complete/one.yaml
@@ -279,6 +279,18 @@ i18n:
       #       fileId: 23jkfa893
 
 resources:
+  layouts:
+    screen1:
+      elements:
+        - id: af32
+          type: rect
+          fill: "#000000"
+          width: 1920
+          height: 1080
+          click:
+            actionPayload:
+              actions:
+                nextLine: {}
   variables:
     # 🔧 persistence Types
 
@@ -1811,10 +1823,16 @@ resources:
   images:
     alkejf3la:
       fileId: 94lkj289
+      width: 1920
+      height: 1080
     f3wklajf32:
       fileId: dmni32
+      width: 1920
+      height: 1080
     32rka331:
       fileId: 23jkfa893
+      width: 1920
+      height: 1080
 
   transforms:
     iasdlf:
@@ -1863,8 +1881,7 @@ story:
                     trigger: fromComplete
                     delay: 1000
                 screen:
-                  resourceId: storyScreenLayout
-                  resourceType: layout
+                  resourceId: screen1
                 visual:
                   items:
                     - id: 39kdfj231
