--- a/vt/specs/dialogue/with-background.yaml
+++ b/vt/specs/dialogue/with-background.yaml
@@ -8,6 +8,17 @@ screen:
 
 resources:
   layouts:
+    screen1:
+      elements:
+        - id: af32
+          type: rect
+          fill: "#000000"
+          width: 1920
+          height: 1080
+          click:
+            actionPayload:
+              actions:
+                nextLine: {}
     storyScreenLayout:
       name: Story Screen Background
       elements:
@@ -68,10 +79,16 @@ resources:
   images:
     alkejf3la:
       fileId: lakjf3lka
+      width: 1920
+      height: 1080
     8a3lkja:
       fileId: dmni32
+      width: 1920
+      height: 1080
     3ljdasfjlk32:
       fileId: 23jkfa893
+      width: 1920
+      height: 1080
 
 story:
   initialSceneId: ajfl3a
@@ -86,8 +103,7 @@ story:
             - id: line1
               actions:
                 screen:
-                  resourceId: storyScreenLayout
-                  resourceType: layout
+                  resourceId: screen1
                 dialogue:
                   layoutId: fi3l
                   content: Hello! Welcome to this visual novel.
